🍫 Added chocolate gallery and fixed image path issues

--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
     <h1>🍫 Cocoa Bliss</h1>
     <div class="grid" id="chocolate-grid"></div>
   </div>
+  <h1>Luxury Chocolates</h1>
+<div class="chocolates">
+  <div class="item">
+    <img src="images/kitkat.jpg" alt="KitKat">
+    <p>KitKat</p>
+  </div>
+  <div class="item">
+    <img src="images/toblerone.jpg" alt="Toblerone">
+    <p>Toblerone</p>
+  </div>
+  <div class="item">
+    <img src="images/galaxy.jpg" alt="Galaxy">
+    <p>Galaxy</p>
+  </div>
+  <div class="item">
+    <img src="images/snickers.jpg" alt="Snickers">
+    <p>Snickers</p>
+  </div>
+  <div class="item">
+    <img src="images/bournville.jpg" alt="Bournville">
+    <p>Bournville</p>
+  </div>
+  <div class="item">
+    <img src="images/milkybar.jpg" alt="Milkybar">
+    <p>Milkybar</p>
+  </div>
+</div>
   <script src="app.js"></script>
 </body>
 </html>
